infrastructure/sg.tf
######################
# SECURITY GROUPS
######################

resource "aws_security_group" "ec2_public_security_group" {
  name        = "${local.prefix}-public-ec2-sg"
  description = "Allows internet access for public EC2"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 5000
    to_port         = 5000
    protocol        = "TCP"
    security_groups = [aws_security_group.alb_security_group.id]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "TCP"
    cidr_blocks = ["37.201.224.30/32"] # My own ip for ssh access. Check the for the correct ip
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    map("Name", "${local.prefix}-EC2")
  )
}

resource "aws_security_group" "alb_security_group" {
  name        = "${local.prefix}-alb-sg"
  description = "Allows traffic through ALB"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTP traffic to load balancer"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow HTTPS traffic to load balancer"
  }

  egress {
    from_port   = 0
    protocol    = "-1"
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    map("Name", "${local.prefix}-ALB")
  )
}

# resource "aws_security_group" "sg_elasticache_cluster" {
#   name        = "${local.prefix}-sg-elasticache"
#   description = "Allow access to elasticache service"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     from_port       = 6379
#     to_port         = 6379
#     protocol        = "TCP"
#     security_groups = [aws_security_group.ec2_public_security_group.id]
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }

#   tags = local.common_tags
# }
